--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -49,6 +49,7 @@
     <Compile Include="DEncrypt\HashEncode.cs" />
     <Compile Include="DEncrypt\RSACryption.cs" />
     <Compile Include="MessageBox.cs" />
+    <Compile Include="PageValidate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
