--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -63,6 +63,10 @@
       <Project>{72e65735-e6dd-40e6-ae96-159c276a69ed}</Project>
       <Name>Model</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SQLServerDAL\SQLServerDAL.csproj">
+      <Project>{b27e94f4-13c5-47d4-9aa2-4c9780c39d43}</Project>
+      <Name>SQLServerDAL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
