--- a/Web/Web.config
+++ b/Web/Web.config
@@ -13,7 +13,7 @@
     <!-- Maticsoft.Accounts权限角色管理模块连接字符串-->
 
     <!--数据访问层程序集名称 -->
-    <add key="DAL" value="BBS.SQLServerDAL.SQLServerDAL"/>
+    <add key="DAL" value="BBS.SQLServerDAL"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
