--- a/SQLServerDAL/SQLServerDAL.csproj
+++ b/SQLServerDAL/SQLServerDAL.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BBS.SQLServerDAL</RootNamespace>
-    <AssemblyName>SQLServerDAL</AssemblyName>
+    <AssemblyName>BBS.SQLServerDAL</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
